# pages-task

./: .gitignore  README.md  main.py  pyproject.toml
paginator/: paginator.py
tests/: test_paginator.py
