[tool.poetry]
name = "page-task"
version = "0.1.0"
description = ""
authors = ["Tiago Florentino"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.6.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

